ionos_dev/search-engine/search/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dome-search-deployment
  namespace: search-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: dome-search
      app.kubernetes.io/name: dome-search
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dome-search
        app.kubernetes.io/name: dome-search
    spec:
      containers:
        - name: search
          image: production.eng.it:8433/dome/search:1.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
