ionos_dev/search-engine/search/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dome-search-svc
spec:
  selector:
    app.kubernetes.io/instance: dome-search
    app.kubernetes.io/name: dome-search
  ports:
    - name: http
      port: 8080
      targetPort: 8080
