ionos_dev/search-engine/search/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dome-search-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: dome-search
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dome-search-svc
            port:
              number: 8080
